[package]
name = "thud-ffi"
version = "0.1.0"
authors = ["Laura Demkowicz-Duffy <edward70891@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
thud = "0.1.4"
libc = "0.2.68"

[build-dependencies]
cbindgen = "0.13.2"
